<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".StartActivity">

	<ImageView
		android:id="@+id/imageView"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:scaleType="fitXY"
		android:src="@drawable/start_background"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.0" />

	<ImageView
		android:id="@+id/imageView2"
		android:layout_width="120dp"
		android:layout_height="120dp"
		android:layout_marginTop="110dp"
		android:src="@drawable/logo"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/textView3"
		style="@style/textHeader2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="90dp"
		android:text="@string/start_str_1"
		android:textAlignment="center"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/imageView2" />

	<TextView
		android:id="@+id/textView4"
		style="@style/textRegular1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:text="@string/start_str_2"
		android:textAlignment="center"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView3" />

	<TextView
		android:id="@+id/btn_open_test"
		style="@style/textRegular1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/test_btn"
		app:layout_constraintBottom_toTopOf="@+id/btn_login"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		android:layout_marginBottom="41dp"
		android:textAlignment="center"
		android:clickable="true" />

	<android.widget.Button
		android:id="@+id/btn_login"
		android:layout_width="245dp"
		android:layout_height="40dp"
		android:text="@string/login_btn"
		style="@style/buttonStyle"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		android:layout_marginBottom="80dp"/>

	<TextView
		android:id="@+id/textView2"
		style="@style/textRegular2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="30dp"
		android:layout_marginBottom="25dp"
		android:text="@string/start_str_3"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

	<TextView
		android:id="@+id/btn_singup"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/registration_btn"
		style="@style/textRegular2"
		android:clickable="true"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		android:layout_marginEnd="30dp"
		android:layout_marginBottom="25dp"/>

	<ImageView
		android:id="@+id/hideLayer"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:scaleType="fitXY"
		android:background="@color/hide_color"
		android:elevation="10dp"
		android:visibility="gone"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.0"
		android:clickable="true"/>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/role_selection"
		android:layout_width="match_parent"
		android:layout_height="215dp"
		android:background="@drawable/drawable_selection_box"
		android:elevation="15dp"
		android:visibility="gone"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent">

		<TextView
			style="@style/textRegular1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:text="@string/role_choice"
			android:textAlignment="center"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<LinearLayout
			android:id="@+id/role_patient"
			android:layout_width="114dp"
			android:layout_height="126dp"
			android:orientation="vertical"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			android:layout_marginBottom="33dp"
			android:layout_marginStart="42dp"
			android:clickable="true">
			<ImageView
				android:layout_width="98dp"
				android:layout_height="85dp"
				android:layout_gravity="center_horizontal|top"
				android:scaleType="fitCenter"
				android:src="@drawable/ic_patient" />

			<TextView
				style="@style/textRegular1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="22dp"
				android:text="@string/role_patient"
				android:textAlignment="center"
				android:layout_gravity="bottom|center_horizontal"/>
		</LinearLayout>

		<LinearLayout
			android:id="@+id/role_doctor"
			android:layout_width="114dp"
			android:layout_height="126dp"
			android:orientation="vertical"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			android:layout_marginBottom="33dp"
			android:layout_marginEnd="42dp"
			android:clickable="true">

			<ImageView
				android:layout_width="98dp"
				android:layout_height="85dp"
				android:layout_gravity="center_horizontal|top"
				android:scaleType="fitCenter"
				android:src="@drawable/ic_doctor" />

			<TextView
				style="@style/textRegular1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="bottom|center_horizontal"
				android:layout_marginTop="22dp"
				android:text="@string/role_doctor"
				android:textAlignment="center" />
		</LinearLayout>


	</androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
