<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".test.TestPreviewActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		android:layout_marginHorizontal="22dp"
		android:layout_marginTop="35dp">

		<ImageView
			android:id="@+id/btn_back"
			android:layout_width="17dp"
			android:layout_height="17dp"
			android:layout_gravity="center_vertical|start"
			android:clickable="true"
			android:src="@drawable/ic_back" />

		<TextView
			style="@style/textHeader1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical|end"
			android:text="@string/test_preview" />
	</LinearLayout>


	<ImageView
		android:id="@+id/imageView2"
		android:layout_width="120dp"
		android:layout_height="120dp"
		android:layout_marginTop="175dp"
		android:src="@drawable/logo"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		style="@style/textRegular1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="60dp"
		android:layout_marginHorizontal="22dp"
		android:text="@string/test_description"
		android:textAlignment="center"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/imageView2" />

	<android.widget.Button
		android:id="@+id/btn_start_test"
		android:layout_width="245dp"
		android:layout_height="40dp"
		android:text="@string/test_btn_start"
		style="@style/buttonStyle"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		android:layout_marginBottom="50dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>